# my-qemu

./: CMakeLists.txt  README.md  main.c  test.txt
include/: execution.h  instructions.h  instructions_table.h  parser.h
src/exec/: execute_instruction.c
src/exec/instructions/: add.c  jmp.c
src/misc/: default_behavior.c
src/parser/: parser.c  read_file.c  split_parameters.c  verify_instructions.c
src/parser/types/: get_param_type.c  number.c  register.c  string.c
